<resources>
    <string name="app_name">Letra</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_add_new_author">Add new author</string>
    <string name="text_add_new_song">Add New Song</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_search">Search</string>
    <string name="text_share">Share</string>
    <string name="text_about">About</string>


    <string name="dialog_title">Choose a Search Option</string>
    <string-array name="items">

        <item>Title</item>
        <item>Category</item>
    </string-array>
    <string name="choose">Choose</string>
    <string name="title_activity_song">SongActivity</string>
</resources>
